# Mazeline-Snake

./: CMakeLists.txt  README.md
source/Engine/: CMakeLists.txt  Camera.cpp  Camera.h  DisplayManager.cpp  DisplayManager.h  EngineSubsystem.h  MazResource.h  MazelineEngine.cpp  MazelineEngine.h  ResourceManager.h
source/Engine/Core/: CMakeLists.txt  Entity.h  Scene.h  Workspace.h
source/Engine/Events/: CMakeLists.txt  Event.h  EventCallback.h
source/Engine/Graphics/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  GraphicsApi.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLApi.cpp  OpenGLApi.h  Shader.cpp  Shader.h  Shaders_srcs.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
source/Engine/Gui/: CMakeLists.txt  Screen.h
source/Engine/IO/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.h
source/Engine/IO/File/: CMakeLists.txt  File.cpp  File.h
source/Engine/Input/: CMakeLists.txt  InputManager.cpp  InputManager.h
source/Engine/Math/: CMakeLists.txt  MathConstants.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.h
source/Engine/Physics/: AABB.cpp  AABB.h  CMakeLists.txt
source/Engine/Util/: Algorithms.h  CMakeLists.txt  Logger.cpp  Logger.h
source/MVStudio/: CMakeLists.txt  MVStudio.cpp  MVStudio.h
source/MVStudio/World/: CMakeLists.txt  World.cpp  World.h
source/Snake/: CMakeLists.txt  SnakeMain.cpp
source/Snake/lib/: MazelineEngine.lib
source/Tests/: CMakeLists.txt  main.cpp
